--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
         <input type="submit" value="Мои работы">
     </div></div>
     
-    <div>
-       <h2>ОБО МНЕ</h2>
+    <div class="main">
+       <p>ОБО МНЕ</p>
        
        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante
 facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.
